RESOLVED FIXED48435
REGRESSION (r70655): Many plugins tests are failing on Qt
https://bugs.webkit.org/show_bug.cgi?id=48435
Summary REGRESSION (r70655): Many plugins tests are failing on Qt
Adam Roben (:aroben)
Reported 2010-10-27 10:06:50 PDT
REGRESSION (r70655): Many plugins tests are failing on Qt
Attachments
Patch (6.20 KB, patch)
2010-10-27 10:07 PDT, Adam Roben (:aroben)
andersca: review+
Adam Roben (:aroben)
Comment 1 2010-10-27 10:07:31 PDT
WebKit Review Bot
Comment 2 2010-10-27 10:12:50 PDT
Attachment 72050 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp:53: PluginTest::NPP_Destroy is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebKitTools/DumpRenderTree/TestNetscapePlugIn/Tests/NullNPPGetValuePointer.cpp:58: NullNPPGetValuePointer::NPP_Destroy is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 3 2010-10-27 10:14:07 PDT
WebKit Review Bot
Comment 4 2010-10-27 14:04:03 PDT
http://trac.webkit.org/changeset/70662 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.