WebKitTools/DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp
@@ -105,7 +105,7 @@ webkit_test_plugin_new_instance(NPMIMEType /*mimetype*/,
 }
 
 static NPError
-webkit_test_plugin_destroy_instance(NPP instance, NPSavedData** /*save*/)
+webkit_test_plugin_destroy_instance(NPP instance, NPSavedData** save)
 {
     PluginObject* obj = static_cast<PluginObject*>(instance->pdata);
     if (obj) {
@@ -128,6 +128,8 @@ webkit_test_plugin_destroy_instance(NPP instance, NPSavedData** /*save*/)
 
         if (obj->onSetWindow)
             free(obj->onSetWindow);
+
+        obj->pluginTest->NPP_Destroy(save);
 
         browser->releaseobject(&obj->header);
     }
