WebKitTools/DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp
@@ -50,6 +50,11 @@ PluginTest::~PluginTest()
 {
 }
 
+NPError PluginTest::NPP_Destroy(NPSavedData**)
+{
+    return NPERR_NO_ERROR;
+}
+
 NPError PluginTest::NPP_DestroyStream(NPStream *stream, NPReason reason)
 {
     return NPERR_NO_ERROR;
